Signed-off-by: ice <ice@ice-PC>

--- a/html/ymEsSite.html
+++ b/html/ymEsSite.html
@@ -11,21 +11,21 @@
 <meta http-equiv="cache-control" content="no-store, must-revalidate, no-cache" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-<link rel="icon" href="favicon.ico" type="image/x-icon" />
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+<link rel="icon" href="../favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
 
 <!-- CSS和JS导入区 -->
-<link href="css/qt/index/index.top.css" type="text/css" rel="stylesheet" media="all" />
-<link href="css/qt/index/index.bottom.css" type="text/css" rel="stylesheet" media="all" />
-<link href="css/cy/justPage/ymPlugin/ymPlugin.css" type="text/css" rel="stylesheet" media="all" />
-<link href="ex/jquery.form/jquery.sare/css/jquery.sare.css" type="text/css" rel="stylesheet" media="all"/>
-<script src="js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/cy/jquery/jquery.method/jquery.method.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/cy/jquery/jquery.method/jquery.method.reg.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/cy/jquery/jquery.method/jquery.method.bind.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/cy/jquery/jquery.infor/jquery.inforValidate.js" type="text/javascript" charset="utf-8"></script>
-<script src="ex/jquery.form/jquery.sare/js/jquery.sare.js" type="text/javascript" charset="utf-8"></script>
-<script src="ex/jquery.form/jquery.sare/js/jquery.bubbleup.js" type="text/javascript" charset="utf-8"></script>
+<link href="../css/qt/index/index.top.css" type="text/css" rel="stylesheet" media="all" />
+<link href="../css/qt/index/index.bottom.css" type="text/css" rel="stylesheet" media="all" />
+<link href="../css/cy/justPage/ymPlugin/ymPlugin.css" type="text/css" rel="stylesheet" media="all" />
+<link href="../ex/jquery.form/jquery.sare/css/jquery.sare.css" type="text/css" rel="stylesheet" media="all"/>
+<script src="../js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="../js/cy/jquery/jquery.method/jquery.method.js" type="text/javascript" charset="utf-8"></script>
+<script src="../js/cy/jquery/jquery.method/jquery.method.reg.js" type="text/javascript" charset="utf-8"></script>
+<script src="../js/cy/jquery/jquery.method/jquery.method.bind.js" type="text/javascript" charset="utf-8"></script>
+<script src="../js/cy/jquery/jquery.infor/jquery.inforValidate.js" type="text/javascript" charset="utf-8"></script>
+<script src="../ex/jquery.form/jquery.sare/js/jquery.sare.js" type="text/javascript" charset="utf-8"></script>
+<script src="../ex/jquery.form/jquery.sare/js/jquery.bubbleup.js" type="text/javascript" charset="utf-8"></script>
 </head>
 
 <body>
@@ -63,7 +63,7 @@
     <div class="m-listSer f-max1218">
      <div class="searchDivInner">
       <div id="mainCaDiv" class="searchDivTj on">
-       <span data-lx-id="-1" class="lx-span current" class="current">全部插件</span>
+       <span data-lx-id="-1" class="lx-span current" class="current">全部网站</span>
       </div>
      </div>
     </div>
@@ -93,32 +93,32 @@
        <ul id="sareMenu">
         <li>
          <a href="javascript:;" onclick="sareToSinaWb()">
-          <img src="ex/jquery.form/jquery.sare/images/jquery.sare_p_001.png" alt="新浪"/>
+          <img src="../ex/jquery.form/jquery.sare/images/jquery.sare_p_001.png" alt="新浪"/>
          </a>
         </li>
         <li>
          <a href="javascript:;" onclick="sareToQqZoneAndIncludePyw()">
-          <img src="ex/jquery.form/jquery.sare/images/jquery.sare_p_002.png" alt="QQ空间"/>
+          <img src="../ex/jquery.form/jquery.sare/images/jquery.sare_p_002.png" alt="QQ空间"/>
          </a>
         </li>
         <li>
          <a href="javascript:;" onclick="sareToRenRen()">
-          <img src="ex/jquery.form/jquery.sare/images/jquery.sare_p_005.png" alt="人人网"/>
+          <img src="../ex/jquery.form/jquery.sare/images/jquery.sare_p_005.png" alt="人人网"/>
          </a>
         </li>
         <li>
          <a href="javascript:;" onclick="sareToQqWb()">
-          <img src="ex/jquery.form/jquery.sare/images/jquery.sare_p_003.png" alt="腾讯微博"/>
+          <img src="../ex/jquery.form/jquery.sare/images/jquery.sare_p_003.png" alt="腾讯微博"/>
          </a>
         </li>
         <li>
          <a href="javascript:;" onclick="shareToBaiDuKj()">
-          <img src="ex/jquery.form/jquery.sare/images/jquery.sare_p_004.png" alt="百度空间"/>
+          <img src="../ex/jquery.form/jquery.sare/images/jquery.sare_p_004.png" alt="百度空间"/>
          </a>
         </li>
         <li style="margin-right:0px;">
          <a href="javascript:;" onclick="sareToKaiXin()">
-          <img src="ex/jquery.form/jquery.sare/images/jquery.sare_p_006.png" alt="开心网" />
+          <img src="../ex/jquery.form/jquery.sare/images/jquery.sare_p_006.png" alt="开心网" />
          </a>
         </li>
        </ul>
@@ -145,6 +145,6 @@
  </div>
 
 <!-- Js导入之底部 -->
-<script src="js/cy/justPage/ymEsSite/ymEsSite.js" type="text/javascript" charset="utf-8"></script>
+<script src="../js/cy/justPage/ymEsSite/ymEsSite.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
