Signed-off-by: ice <ice@ice-PC>

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>优码-前端插件</title>
+<title>前端插件</title>
 <meta name="author" content="李大林(古雨Qq494174519)" />
 <meta name="robots" content="all" />
 <meta http-equiv="pragma" content="no-cache" />
